// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackButton > should not redirect to given url when disabled 1`] = `
<div>
  <button
    class="flex w-12 items-center bg-theme-secondary-100 transition-colors duration-200 dark:bg-black cursor-not-allowed text-theme-secondary-500 dark:text-theme-secondary-800"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`BackButton > should not redirect to previous page when disabled 1`] = `
<div>
  <button
    class="flex w-12 items-center bg-theme-secondary-100 transition-colors duration-200 dark:bg-black cursor-not-allowed text-theme-secondary-500 dark:text-theme-secondary-800"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`BackButton > should render 1`] = `
<div>
  <button
    class="flex w-12 items-center bg-theme-secondary-100 transition-colors duration-200 dark:bg-black text-theme-primary-600 hover:bg-theme-primary-100 focus:rounded focus:outline-none focus:ring-2 focus:ring-inset focus:ring-theme-primary-400 dark:text-theme-secondary-200 hover:dark:bg-theme-secondary-800"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`BackButton > should render when disabled 1`] = `
<div>
  <button
    class="flex w-12 items-center bg-theme-secondary-100 transition-colors duration-200 dark:bg-black cursor-not-allowed text-theme-secondary-500 dark:text-theme-secondary-800"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;
